# raw2translated

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
configs/: characters.example.json  characters.example.yaml  glossary.example.json  glossary.example.yaml  translation_memory.example.json
configs/style_presets/: anime_subgroup.yaml
docs/: DATA_MODEL.md  IMPLEMENTATION_STATUS.md  PROJECT_PLAN.md
src/raw2translated/: __init__.py  alignment.py  asr.py  characters.py  cli.py  diarization.py  ffmpeg.py  gui.py  models.py  pipeline.py  preprocess.py  subtitles.py  translation.py
tests/: test_alignment.py  test_asr.py  test_batch.py  test_characters.py  test_cli.py  test_diarization.py  test_gui.py  test_models.py  test_pipeline.py  test_preprocess.py  test_subtitles.py  test_translation.py
