[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "raw2translated"
version = "0.1.0"
description = "Local-first anime transcription, speaker attribution, translation, and subtitle pipeline."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "raw2translated contributors" }]
dependencies = []

[project.optional-dependencies]
asr = [
  "faster-whisper",
]
align = [
  "whisperx",
]
diarization = [
  "pyannote.audio",
]
preprocess = [
  "demucs",
]
models = [
  "demucs",
  "faster-whisper",
  "whisperx",
  "pyannote.audio",
  "speechbrain",
]
subtitle = [
  "pysubs2",
]
gui = [
  "sv-ttk",
]
dev = [
  "pytest",
  "ruff",
]

[project.scripts]
raw2translated = "raw2translated.cli:main"

[project.gui-scripts]
raw2translated-gui = "raw2translated.gui:launch"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 110
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
# A deliberately modest rule set: pyflakes, pycodestyle, isort, pyupgrade, bugbear.
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# Tests intentionally use long inline fixtures and assertions.
"tests/*" = ["E501"]
